--- a/haihuilai_buyer/class/LoginAndSignUp/View/HHLogInView.xib
+++ b/haihuilai_buyer/class/LoginAndSignUp/View/HHLogInView.xib
@@ -45,6 +45,16 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="国家码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i5k-Lc-rD4" userLabel="国家码">
+                    <rect key="frame" x="32" y="42" width="50" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="Ibu-zT-fJ4"/>
+                        <constraint firstAttribute="height" constant="17" id="oIG-Vs-jpG"/>
+                    </constraints>
+                    <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PRy-We-P6B">
                     <rect key="frame" x="36" y="42" width="46" height="30"/>
                     <constraints>
@@ -133,9 +143,11 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="i5k-Lc-rD4" firstAttribute="leading" secondItem="AI7-Jv-9gG" secondAttribute="leading" id="13Y-yc-4S7"/>
                 <constraint firstItem="PRy-We-P6B" firstAttribute="top" secondItem="AI7-Jv-9gG" secondAttribute="bottom" constant="10" id="1XI-ai-KWq"/>
                 <constraint firstItem="dFv-ly-WBS" firstAttribute="leading" secondItem="PRy-We-P6B" secondAttribute="trailing" constant="5" id="2Wd-U2-LNw"/>
                 <constraint firstItem="dFv-ly-WBS" firstAttribute="centerY" secondItem="PRy-We-P6B" secondAttribute="centerY" id="3rQ-G4-U8S"/>
+                <constraint firstItem="i5k-Lc-rD4" firstAttribute="top" secondItem="AI7-Jv-9gG" secondAttribute="bottom" constant="10" id="58f-kO-R7l"/>
                 <constraint firstItem="LV2-d3-Nuh" firstAttribute="leading" secondItem="AI7-Jv-9gG" secondAttribute="leading" id="AL5-Bh-I7E"/>
                 <constraint firstItem="PRy-We-P6B" firstAttribute="leading" secondItem="AI7-Jv-9gG" secondAttribute="leading" id="Aeb-4N-8qh"/>
                 <constraint firstItem="IXP-Zf-nb9" firstAttribute="leading" secondItem="tjL-uJ-cJH" secondAttribute="trailing" constant="-86" id="AuA-rh-7Zj"/>
@@ -164,7 +176,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="btnForLogin" destination="tjL-uJ-cJH" id="rXc-az-Lda"/>
-                <outlet property="contryNumber" destination="PRy-We-P6B" id="dL7-Hu-7AP"/>
+                <outlet property="countryNumber" destination="i5k-Lc-rD4" id="xBm-8x-M2f"/>
                 <outlet property="phoneNumber" destination="B4A-gp-7PW" id="l3s-Gr-EbI"/>
                 <outlet property="secretNumber" destination="F81-9L-vO2" id="uE1-wm-mqj"/>
             </connections>
